--- a/index.html
+++ b/index.html
@@ -12,5 +12,13 @@
 
   <script src="public/client/index.js"></script>
   <script src="public/client/components/app.js"></script>
+  <!--
+  <script src="public/client/components/nav.js"></script>
+  <script src="public/client/components/search.js"></script>
+  <script src="public/client/components/movieList.js"></script>
+  <script src="public/client/components/movieEntry.js"></script>
+  <script src="public/client/components/signUp.js"></script>
+  <script src="public/client/components/login.js"></script>
+  -->
 </body>
 </html>
