--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
     <h5>This message will disappear!</h5>
   </app>
 
+  <script src="dummy_data.js"></script>
+  <script src="exampleData.js"></script>
   <script src="public/client/index.js"></script>
   <script src="public/client/components/app.js"></script>
   <script src="public/client/components/search.js"></script>
   <script src="public/client/components/movieList.js"></script>
+  <script src="public/client/components/movieEntry.js"></script>
 
   <!--
   <script src="public/client/components/nav.js"></script>
-  <script src="public/client/components/movieEntry.js"></script>
   <script src="public/client/components/signUp.js"></script>
   <script src="public/client/components/login.js"></script>
   -->
