query OMBD on find movie button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="exampleData.js"></script>
   <script src="public/client/index.js"></script>
   <script src="public/client/components/app.js"></script>
+  <script src="public/services/searchOMDB.js"></script>
   <script src="public/client/components/search.js"></script>
   <script src="public/client/components/movieList.js"></script>
   <script src="public/client/components/movieEntry.js"></script>
