add theMovieDB service, implement basic search box functionality

--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
   <script src="exampleData.js"></script>
   <script src="public/client/index.js"></script>
   <script src="public/client/components/app.js"></script>
-  <script src="public/services/searchOMDB.js"></script>
   <script src="public/client/components/search.js"></script>
   <script src="public/client/components/movieList.js"></script>
   <script src="public/client/components/movieEntry.js"></script>
   <script src="public/client/components/authPanel.js"></script>
-  <script src="public/client/services/auth.js"></script>
+
+  <script src="public/client/components/searchResultEntry.js"></script>
+
+  <script src="public/client/components/searchResultList.js"></script>
+
+  <script src="public/services/auth.js"></script>
+  <script src="public/services/searchOMDB.js"></script>
+  <script src="public/services/searchTheMovieDB.js"></script>
 
   <!--
   <script src="public/client/components/nav.js"></script>
