--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Goodfilms.io</title>
   <script src="node_modules/lodash/lodash.js"></script>
   <script src="node_modules/angular/angular.js"></script>
+  <link rel="stylesheet" href="public/client/styles.css">
 </head>
 <body>
   <app ng-app="main-app">
