added bootstrap and tabs

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <title>Goodfilms.io</title>
   <script src="node_modules/lodash/lodash.js"></script>
   <script src="node_modules/angular/angular.js"></script>
+  <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="public/client/styles.css">
   <script src="node_modules/angular-route/angular-route.js"></script>
 </head>
 <body ng-app="main-app">
-
-  <div ng-view></div>
+  <div class="container" ng-view></div>
 
   <script src="exampleData.js"></script>
   <script src="public/client/index.js"></script>
@@ -27,7 +27,8 @@
   <script src="public/services/auth.js"></script>
   <script src="public/services/searchOMDB.js"></script>
   <script src="public/services/searchTheMovieDB.js"></script>
-
+  <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <!--
   <script src="public/client/components/nav.js"></script>
   <script src="public/client/components/signUp.js"></script>
