--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   <link rel="stylesheet" href="public/client/styles.css">
   <script src="node_modules/angular-route/angular-route.js"></script>
 </head>
+<header>
+  <div class="main-header">
+    <h1 class="main-header-text">goodfilms</h1>
+  </div>
+</header>
 <body ng-app="main-app">
   <div class="container" ng-view></div>
 
