--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1 class="main-header-text">goodfilms</h1>
   </div>
 </header>
-<body ng-app="main-app">
+<body id="body" ng-app="main-app">
   <div class="container" ng-view></div>
 
   <script src="exampleData.js"></script>
@@ -39,5 +39,8 @@
   <script src="public/client/components/signUp.js"></script>
   <script src="public/client/components/login.js"></script>
   -->
+ <!--  <footer>
+    <h2 id="footer">jmx2</h2>
+  </footer> -->
 </body>
 </html>
