added recommendation tab

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   <script src="public/client/components/search.js"></script>
   <script src="public/client/components/movieList.js"></script>
   <script src="public/client/components/movieEntry.js"></script>
+  <script src="public/client/components/recList.js"></script>
+  <script src="public/client/components/recEntry.js"></script>
   <script src="public/client/components/authPanel.js"></script>
 
   <script src="public/client/components/searchResultEntry.js"></script>
