add styling and image to header

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 </head>
 <header>
   <div class="main-header">
-    <h1 class="main-header-text">goodfilms</h1>
+    <h1 class="main-header-text">Goodfilms</h1>
+    <h3 class="header-sub-text">be your own critic...</h3>
   </div>
+  <div class="color-border"></div>
 </header>
 <body id="body" ng-app="main-app">
   <div class="container" ng-view></div>
