add upcoming feature

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
   <script src="public/client/components/movieEntry.js"></script>
   <script src="public/client/components/recList.js"></script>
   <script src="public/client/components/recEntry.js"></script>
+  <script src="public/client/components/upcomingList.js"></script>
+  <script src="public/client/components/upcomingEntry.js"></script>
   <script src="public/client/components/authPanel.js"></script>
 
   <script src="public/client/components/searchResultEntry.js"></script>
