--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <div class="container" ng-view></div>
 
   <script src="exampleData.js"></script>
+  <script src="keys.js"></script>
   <script src="public/client/index.js"></script>
   <script src="public/client/components/app.js"></script>
   <script src="public/client/components/search.js"></script>
