Create video player -- needs to be moved into details view

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body id="body" ng-app="main-app">
   <div class="container" ng-view></div>
 
-  <script src="exampleData.js"></script>
+  <!-- <script src="exampleData.js"></script> -->
   <script src="keys.js"></script>
   <script src="public/client/index.js"></script>
   <script src="public/client/components/app.js"></script>
@@ -33,6 +33,7 @@
   <script src="public/client/components/upcomingList.js"></script>
   <script src="public/client/components/upcomingEntry.js"></script>
   <script src="public/client/components/authPanel.js"></script>
+  <script src="public/client/components/videoPlayer.js"></script>
 
 
   <script src="public/client/components/searchResultEntry.js"></script>
@@ -42,6 +43,7 @@
   <script src="public/services/auth.js"></script>
   <script src="public/services/searchOMDB.js"></script>
   <script src="public/services/searchTheMovieDB.js"></script>
+  <script src="public/services/youtube.js"></script>
   <!--
   <script src="public/client/components/nav.js"></script>
   <script src="public/client/components/signUp.js"></script>
