--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
   </footer> -->
   <div style="display: none">
     <script type="text/javascript" language="javascript" src="http://www.boxofficemojo.com/data/js/wknd5.php?h=myclass1&r=myclass2"></script>
-    <script> var a = document.getElementsByClassName('myclass2');
+    <script>
+      var a = document.getElementsByClassName('myclass2');
       var movies = {};
       for (var i = 0; i < a.length; i++) {
         if (i % 2 === 0) {
@@ -62,6 +63,8 @@
         }
       }
       window.movies = movies;
+
+      window.weekendBoxOffice = document.getElementsByClassName('myclass1')[0].textContent;
     </script>
   </div>
   <script src="public/client/components/boxOffice.js"></script>
