--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <script src="public/client/components/upcomingEntry.js"></script>
   <script src="public/client/components/authPanel.js"></script>
   <script src="public/client/components/videoPlayer.js"></script>
+  <script src="public/client/components/reviews.js"></script>
 
 
   <script src="public/client/components/searchResultEntry.js"></script>
