gets started on reviews

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
   <script src="public/client/components/authPanel.js"></script>
   <script src="public/client/components/videoPlayer.js"></script>
   <script src="public/client/components/reviews.js"></script>
+  <script src="public/client/components/reviewEntry.js"></script>
+
 
 
   <script src="public/client/components/searchResultEntry.js"></script>
