--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
   <script src="public/services/searchOMDB.js"></script>
   <script src="public/services/searchTheMovieDB.js"></script>
   <script src="public/services/youtube.js"></script>
+  <script src="public/services/review.js"></script>
+
   <!--
   <script src="public/client/components/nav.js"></script>
   <script src="public/client/components/signUp.js"></script>
