--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <script src="public/client/components/videoPlayer.js"></script>
   <script src="public/client/components/reviews.js"></script>
   <script src="public/client/components/reviewEntry.js"></script>
-
+  <script src="public/client/components/movieDetails.js"></script>
 
 
   <script src="public/client/components/searchResultEntry.js"></script>
